Fix alignment and width issues in index.html and index.css

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -91,7 +91,7 @@ body {
 
 .publication-video {
     position: relative;
-    width: 50%;
+    width: 100%;
     height: 0;
     padding-bottom: 56.25%;
 
